# Tiendo

./: README.md  app_launcher.py  main.py  pyproject.toml  ruff.toml
controller/: admin_routers.py  api_routers.py  carritos.py  categorias.py  client_routers.py  clientes.py  envios.py  pagos.py  pedidos.py  productos.py  routers.py
data/: database.py
model/: __init__.py  carrito.py  categoria.py  cliente.py  envio.py  pago.py  pedido.py  producto.py
static/css/: admin_index.css  admin_login.css  cart.css  header.css  index.css  product.css  user.css
static/js/: admin_index.js  admin_login.js  cart.js  header.js  index.js  product.js  register.js  user.js
templates/: admin_categories.html  admin_categories_add.html  admin_index.html  admin_login.html  admin_orders.html  admin_orders_pending.html  admin_products.html  admin_products_add.html  admin_users.html  admin_users_activity.html  cart.html  header.html  index.html  layaout.html  login.html  product.html  register.html  user.html
view/: cart.html  header.html  index.html  product.html  register.html  user.html
view/css/: cart.css  header.css  index.css  product.css  user.css
view/icon/: site.webmanifest
view/js/: cart.js  header.js  index.js  product.js  register.js  user.js
