[project]
name = "tiendo"
version = "0.1.0"
description = "Basic international virtual store"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "jinja2>=3.1.6",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.4",
    "python-multipart>=0.0.20",
    "pywebview>=6.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
